syntax = "proto3";

package proto;

option go_package = "./";

// Chunk Service for handling chunk operations
service ChunkService {
  rpc WriteChunk(WriteRequest) returns (WriteResponse);
  rpc ReadChunk(ReadRequest) returns (ReadResponse);
rpc SendChunk(ReplicationRequest) returns (ReplicationResponse);
}

// Request for writing a chunk
message WriteRequest {
  string chunk_id = 1;
  bytes data = 2;
  int32 version = 3;
}

// Response after writing a chunk
message WriteResponse {
  bool success = 1;
  string message = 2;
}

// Request for reading a chunk
message ReadRequest {
  string chunk_id = 1;
}

// Response after reading a chunk
message ReadResponse {
  bool success = 1;
  bytes data = 2;
}

// Request for chunk replication
message ReplicationRequest {
  string chunk_id = 1;
  bytes data = 2;
  int32 version = 3; // Ensures consistent versioning across replicas
repeated string followers = 4;
}

// Response after chunk replication
message ReplicationResponse {
  bool success = 1;
  string message = 2;
}
